src/snapshots/salad_core__level_trait__tests__paper_svg_with_modifiers.snap
---
source: src/level_trait.rs
expression: svg.clone()
---
<svg xmlns="http://www.w3.org/2000/svg" style="background:white" viewBox="0 0 500 772"  >
<text x="100" y="22" dominant-baseline="central" fill="#221f21" font-size="22pt" font-family="Montserrat" font-weight="700" style="text-align: left; text-anchor: left;">Furniture </text>
<rect width="400" height="400" x="50" y="110"  rx="0" stroke="#221f21" stroke-width="3" fill="transparent" style="fill:none"> </rect>
<rect width="100" height="100" x="50" y="110"  rx="0" stroke="#221f21" stroke-width="2" fill="transparent" style="fill:none"> </rect>
<text transform="translate(100,160) " font-size="40" dominant-baseline="central" fill="#6b6e71" font-family="Montserrat" font-weight="bold" style="text-align: center; text-anchor: middle;">C </text>
<rect width="100" height="100" x="150" y="110"  rx="0" stroke="#221f21" stroke-width="2" fill="transparent" style="fill:none"> </rect>
<text transform="translate(200,160) " font-size="40" dominant-baseline="central" fill="#6b6e71" font-family="Montserrat" font-weight="bold" style="text-align: center; text-anchor: middle;">H </text>
<rect width="12.000001" height="12.000001" x="235" y="113"  rx="0" stroke="#221f21" stroke-width="1" fill="transparent" style="fill:none"> </rect>
<rect width="100" height="100" x="250" y="110"  rx="0" stroke="#221f21" stroke-width="2" fill="transparent" style="fill:none"> </rect>
<text transform="translate(300,160) " font-size="40" dominant-baseline="central" fill="#6b6e71" font-family="Montserrat" font-weight="bold" style="text-align: center; text-anchor: middle;">S </text>
<rect width="12.000001" height="12.000001" x="335" y="113"  rx="0" stroke="#221f21" stroke-width="1" fill="transparent" style="fill:none"> </rect>
<rect width="100" height="100" x="350" y="110"  rx="0" stroke="#221f21" stroke-width="2" fill="transparent" style="fill:none"> </rect>
<text transform="translate(400,160) scale (1, -1)" font-size="40" dominant-baseline="central" fill="#6b6e71" font-family="Montserrat" font-weight="bold" style="text-align: center; text-anchor: middle;">T </text>
<rect width="12.000001" height="12.000001" x="435" y="113"  rx="0" stroke="#221f21" stroke-width="1" fill="transparent" style="fill:none"> </rect>
<rect width="100" height="100" x="50" y="210"  rx="0" stroke="#221f21" stroke-width="2" fill="transparent" style="fill:none"> </rect>
<text transform="translate(100,260) " font-size="40" dominant-baseline="central" fill="#6b6e71" font-family="Montserrat" font-weight="bold" style="text-align: center; text-anchor: middle;">8 </text>
<rect width="100" height="100" x="150" y="210"  rx="0" stroke="#221f21" stroke-width="2" fill="transparent" style="fill:none"> </rect>
<text transform="translate(200,260) " font-size="40" dominant-baseline="central" fill="#6b6e71" font-family="Montserrat" font-weight="bold" style="text-align: center; text-anchor: middle;">E </text>
<rect width="12.000001" height="12.000001" x="235" y="213"  rx="0" stroke="#221f21" stroke-width="1" fill="transparent" style="fill:none"> </rect>
<rect width="12.000001" height="12.000001" x="235" y="228"  rx="0" stroke="#221f21" stroke-width="1" fill="transparent" style="fill:none"> </rect>
<rect width="12.000001" height="12.000001" x="235" y="243"  rx="0" stroke="#221f21" stroke-width="1" fill="transparent" style="fill:none"> </rect>
<rect width="100" height="100" x="250" y="210"  rx="0" stroke="#221f21" stroke-width="2" fill="transparent" style="fill:none"> </rect>
<svg viewBox="0 0  128 156" x="275" y="235" width="50" height="50"> <path fill="#6b6e71" d="m60.9 145.5c-4.2-1-8.9-4.6-12.6-9.5-1.5-2-2.7-4.1-2.5-4.3 0 0 .9.1 1.8.3 4.6 1 9.1 1.3 16.5 1.3s11.2-.3 16-1.3c.9-.2 1.8-.3 1.8-.3.3.3-3 4.9-5 7-5.3 5.7-10.9 8-16 6.7zm-43.4-5.8c-.2-.5-.4-1.3-.4-1.8 0-.9 0-.9-.7-.1-.4.4-.9 1-1 1.3-.3.4-.3.4-.3-.6 0-1.6.4-2.3 3.3-5 2.2-2.1 2.5-2.5 2.3-2.9-.3-.6.2-2.3 2.9-9.7.9-2.3 1.6-4.3 1.6-4.5 0-.1-.3-.5-.7-.8-.6-.5-.7-.7-.5-1.5.1-.9 6.6-20.8 7.9-24.5.4-1 .7-2.1.7-2.4 0-.9 1.4-1.8 4.1-2.5 4.8-1.3 8.6-1.8 12.4-1.7 3.5.1 3.5.1 5.1-1.4 1.4-1.3 1.6-1.6 1.8-2.8.1-.7.4-1.9.6-2.6.4-1.2.4-1.2-1.1-3.3-1.5-2.1-1.5-2.1-3.4-1.3-2.4 1-5 1.2-7.2.7-1.6-.4-11.6-4.7-13.3-5.8-.5-.3-1-.4-1.1-.3-.1.1-1.9 3.2-4 7-5 9-7 12.4-7.8 12.9-.6.4-.8.4-1.5.1-.5-.2-.9-.2-.9-.1s-1.4 2.8-2.9 5.8c-2.4 4.7-2.9 5.6-3.5 5.6-.6.1-4.4 3.2-5.4 4.4-.3.3-.7 1.2-.9 1.9-.4 1.3-.4 1.3-.8.4-.3-.7-.3-1.1-.1-1.8.2-.6.2-.9-.1-.9-.4 0-1.3.9-1.7 1.5-.4.7-.7.2-.5-.8.2-1.2 1.7-2.5 4.7-4.3 2.2-1.2 2.5-1.5 2.4-2.1-.1-.4 1-2.2 3.5-5.9 3.2-4.7 3.5-5.3 3.2-5.7-.8-.9-.5-1.8 1.6-4.5 2.9-3.6 10.1-12.2 12.7-15.1 1.2-1.3 2.2-2.5 2.2-2.7 0-.3 1.2-.8 1.9-.8.3 0 2.1.5 4.1 1.2 3.9 1.3 8.9 3.7 11.4 5.6.9.7 1.7 1.2 1.9 1.2s.8-.2 1.5-.4c1.2-.4 1.2-.4.3-2.7-.8-2.1-1.3-3.9-1.8-7.5-.2-1.4-.2-1.4-1.9-2-2.1-.7-5.5-2.6-7-3.9-.9-.8-1.1-1.1-1.1-1.9 0-.9-.6-1.6-6.4-7.9-8.4-9.1-8.3-9-7.2-10.3.5-.6.5-.6-2.9-4.5-2.5-2.9-3.4-4-3.3-4.4.1-.5-.3-.8-3-1.9-3.5-1.5-4.8-2.6-4.8-4 0-.9 0-.9.4-.3.4.6 1.9 1.5 2.1 1.3.1-.1 0-.4-.2-.8-.3-.7-.1-2.6.2-2.6.1 0 .3.4.5.9s.7 1.3 1.2 1.8c1.3 1.3 4.4 3.4 5.3 3.6.7.1 1.2.8 3.5 4.3 1.5 2.3 2.8 4.3 3 4.5.2.3.3.3.7-.1 1-.9 1.9-.6 3.2 1.4s4.6 7.6 7.1 12.3c1.9 3.6 2 3.8 2.7 3.5.9-.3 1.8-.1 3.5 1 1.8 1 4.8 2.6 4.9 2.5 0 0 .3-.8.6-1.7 1.4-3.7 4.4-7.3 7.2-8.7 1.3-.6 1.3-.6-1.1-1.1-5.5-1-8.7-3.5-10.3-8.1-.9-2.6-.9-6.8.1-9.5.4-1.1 1-2.6 1.2-3.4 1.1-3 2.5-4.3 4.7-4.4.7 0 1.2-.1 1.2-.3 0-.5-2.3-3.4-3.9-4.8-.8-.7-2.4-1.9-3.5-2.6-3.1-2-3.5-2.4-3.5-3.4s1-2 2-2c1.6 0 6.5 4.4 8.9 8 .9 1.3 1.6 2.5 1.6 2.6s.5 0 1.1-.4c3.6-2.1 9.7-2.2 13.7-.3.8.4 1.5.7 1.6.7s.6-.7 1.1-1.7c1.8-3.3 6.2-7.7 8.6-8.7 1.1-.5 2.2-.1 2.6.9.6 1.3.1 2-3.1 4.1-3.4 2.3-3.8 2.6-6 5.3-1.7 2.1-2 2.9-.9 2.5 1.5-.5 3.9 1.2 4.7 3.3.2.5.7 1.8 1.1 2.8 1 2.4 1.3 4.2 1.3 6.6 0 7.4-4.2 11.9-12 13-1.3.2-1.3.2.2 1 2.8 1.4 5.7 5 7 8.7.3.8.6 1.5.7 1.5s1.5-.7 3.1-1.5c3.6-2 4.1-2.2 5-1.8.7.3.7.2 1.6-1.4.5-.9 1.7-3.1 2.7-5 2.6-4.7 5.6-9.8 6.4-10.6s1.5-.9 2.3-.3c.5.4.7.2 3.5-4.1 2.5-3.8 3.1-4.5 3.6-4.5.7 0 4.2-2.4 5.3-3.5.3-.3.9-1.2 1.2-1.8.5-1 .7-1.1.8-.7.1.3.1 1.1 0 1.8-.1.8 0 1.3.1 1.3s.7-.4 1.3-1c1.2-1 1.4-.8.7.8-.4 1.1-1.6 1.8-4.9 3.2-2.2 1-2.5 1.2-2.5 1.8 0 .5-1 1.7-3.4 4.4-1.8 2-3.4 3.8-3.4 4 0 .1.2.4.4.6.7.6.5 1.7-.5 2.8-.5.6-3.6 4-7 7.7-5.5 6-6.2 6.8-6.2 7.6 0 1.1-.2 1.4-2.5 3-2.2 1.6-4 2.5-6 3.1-1.5.4-1.5.4-1.6 2.5-.2 2.7-.7 4.4-2.4 8.6-.1.4.1.5 1.2.9 1.4.5 1.4.5 3.1-.8.9-.7 2.6-1.8 3.8-2.4 3.9-2.1 11.1-4.6 12.4-4.3.7.2 2.5 2.1 11.6 13.1 4.4 5.3 6.7 8.2 6.7 8.6 0 .3-.2.9-.4 1.2-.4.5-.2.8 3.2 5.9 2.7 4 3.5 5.5 3.4 5.9-.1.5.2.8 2.3 1.9 1.3.7 3 1.8 3.6 2.4 1 .9 1.1 1.2 1.1 2.1 0 1 0 1-.8 0-1.1-1.3-1.5-1.3-1.4.2.1.7 0 1.4-.2 1.8-.3.6-.4.5-.9-1-.5-1.2-1.1-2-2.5-3.3-1-1-2.4-2-3.1-2.4-1.3-.6-1.3-.7-4.1-6.2-1.6-3.2-3-5.5-3.2-5.5s-.6.1-.9.2c-1.2.4-2.1-.9-9.8-14.7-1.7-3-3.1-5.5-3.1-5.5 0-.1-.5.1-1 .4-1.4.8-12.4 5.5-13.8 5.9-1.8.5-4.5.2-6.8-.8-1.9-.8-1.9-.8-2.8.6-.5.7-1.2 1.7-1.5 2-.6.7-.6.7-.1 2.1.3.8.5 1.9.5 2.5 0 .9.2 1.2 1.6 2.6 1.6 1.6 1.6 1.6 6.2 1.6 3.6 0 5.2.2 7.5.6 6.1 1.3 8.4 2.3 8.4 3.8 0 .3 1.9 6.3 4.3 13.4 2.3 7.1 4.3 13.2 4.3 13.6 0 .7-.4 1.3-1.2 1.6-.1 0 .5 2 1.3 4.4 3.3 9.1 3.4 9.5 3 10-.3.5-.1.7 2.1 2.7 2.6 2.4 3.7 3.9 3.7 5.2 0 1-.4 1.4-.7.6-.2-.7-1.2-1.9-1.5-1.9-.1 0-.2.5-.2 1.2s-.2 1.4-.5 1.8c-.5.6-.5.6-.6-.8-.1-.7-.4-1.7-.6-2.2-.7-1.3-3.2-4.7-4.1-5.5-.7-.6-.9-1.4-2.4-7.3-.9-3.6-1.7-6.9-1.7-7.2-.1-.5-.3-.6-1-.6-1.9 0-2-.7-4.3-16.9-1.3-8.9-1.3-8.9-3.4-9-3.5-.3-12.3-1.8-14.1-2.4-1.9-.6-4.3-2.3-5.6-3.8-.5-.6-.9-1-.9-.9s-.4.6-.8 1.2c-.4.6-1.1 1.4-1.7 1.8-1 .7-1 .7 1 1.2 7.6 1.9 13.5 8.1 15.9 16.5.3 1.2.7 2.8.8 3.5.2 1.3.2 1.3-1.9 1.7-7.9 1.2-22 1.7-30.3 1.1-5-.4-12.7-1.3-13-1.6-.3-.3.7-4.8 1.6-7 2.1-5.3 5.5-9.4 10.1-12.1 1.6-.9 5.7-2.4 6.7-2.4.6 0 .5-.1-.6-1.1-.7-.6-1.5-1.5-1.8-2-.6-.9-.6-.9-2.3.8-1.7 1.6-3.4 2.7-5.3 3.3-1.3.4-12.8 2.2-14.3 2.2-1.2 0-1.3 0-1.4.9-.1.5-.7 4.8-1.4 9.5-1.5 10.6-2.1 14.1-2.6 14.9-.3.5-.7.6-1.4.6-1 0-1 0-2.7 7.1-1.7 7.3-2 8-2.5 8-.4 0-3.3 3.9-4.1 5.5-.3.7-.6 1.7-.6 2.4 0 1.4-.3 1.4-.9.2zm39.9-8.5c-4.3-.4-6.5-.7-9.7-1.3-3.6-.7-3.6-.7-3.9-1.5-2.2-6.1-2.9-9-3.1-13.6-.2-3.5-.2-3.5 1.3-3.4.8.1 3.6.4 6.2.8 4.3.5 5.9.6 15.7.6 9.7 0 11.5-.1 15.6-.6 2.5-.3 5.3-.7 6.1-.8 1.4-.2 1.4-.2 1.3 2.8-.1 1.7-.4 4.3-.7 5.9-.5 2.7-2.3 8.4-2.8 8.9-.3.3-4.7 1.2-8.4 1.7-2.8.4-15 .7-17.5.5z"/> </svg>
<text transform="translate(300,260) " font-size="40" dominant-baseline="central" fill="#6b6e71" font-family="Montserrat" font-weight="bold" style="text-align: center; text-anchor: middle;"> </text>
<rect width="12.000001" height="12.000001" x="335" y="213"  rx="0" stroke="#221f21" stroke-width="1" fill="transparent" style="fill:none"> </rect>
<rect width="100" height="100" x="350" y="210"  rx="0" stroke="#221f21" stroke-width="2" fill="transparent" style="fill:none"> </rect>
<text transform="translate(400,260) " font-size="40" dominant-baseline="central" fill="#6b6e71" font-family="Montserrat" font-weight="bold" style="text-align: center; text-anchor: middle;">A </text>
<rect width="12.000001" height="12.000001" x="435" y="213"  rx="0" stroke="#221f21" stroke-width="1" fill="transparent" style="fill:none"> </rect>
<rect width="100" height="100" x="50" y="310"  rx="0" stroke="#221f21" stroke-width="2" fill="transparent" style="fill:none"> </rect>
<text transform="translate(100,360) " font-size="40" dominant-baseline="central" fill="#6b6e71" font-family="Montserrat" font-weight="bold" style="text-align: center; text-anchor: middle;">D </text>
<rect width="100" height="100" x="150" y="310"  rx="0" stroke="#221f21" stroke-width="2" fill="transparent" style="fill:none"> </rect>
<text transform="translate(200,360) " font-size="40" dominant-baseline="central" fill="#6b6e71" font-family="Montserrat" font-weight="bold" style="text-align: center; text-anchor: middle;">A </text>
<rect width="100" height="100" x="250" y="310"  rx="0" stroke="#221f21" stroke-width="2" fill="transparent" style="fill:none"> </rect>
<text transform="translate(300,360) " font-size="40" dominant-baseline="central" fill="#6b6e71" font-family="Montserrat" font-weight="bold" style="text-align: center; text-anchor: middle;">B </text>
<rect width="12.000001" height="12.000001" x="335" y="313"  rx="0" stroke="#221f21" stroke-width="1" fill="transparent" style="fill:none"> </rect>
<rect width="100" height="100" x="350" y="310"  rx="0" stroke="#221f21" stroke-width="2" fill="transparent" style="fill:none"> </rect>
<text transform="translate(400,360) " font-size="40" dominant-baseline="central" fill="#6b6e71" font-family="Montserrat" font-weight="bold" style="text-align: center; text-anchor: middle;">F </text>
<rect width="12.000001" height="12.000001" x="435" y="313"  rx="0" stroke="#221f21" stroke-width="1" fill="transparent" style="fill:none"> </rect>
<rect width="100" height="100" x="50" y="410"  rx="0" stroke="#221f21" stroke-width="2" fill="transparent" style="fill:none"> </rect>
<svg viewBox="0 0  104 170" x="62.5" y="467.5" width="25" height="25"> <path fill="#6b6e71" d="m93.4 111.5c-2.2 1.3-4 2.3-4.2 2.3-.1-0-2.4-3.7-5-8.1-2.6-4.5-7.3-12.3-10.3-17.4-3-5.1-7.4-12.5-9.7-16.4s-5.9-9.9-7.9-13.2c-2-3.3-6.8-11.4-10.6-17.9-3.8-6.5-7.7-13-8.5-14.4-.9-1.4-1.5-2.7-1.4-2.8.6-.6 7.5-4.5 7.8-4.5.1 0 1.3 1.9 2.6 4.1 1.3 2.2 3.7 6.2 5.3 9 1.6 2.8 3.9 6.6 5 8.5 1.1 1.9 4.3 7.3 7.1 12 2.8 4.7 6.4 10.7 7.9 13.4 1.6 2.6 6.1 10.2 10.1 16.9s8.9 15 10.9 18.4c2 3.4 3.9 6.6 4.2 7l.5.8-3.9 2.3zm-22.5 13.3c-4 2.3-3.9 2.2-4.2 1.9-.1-.2-.8-1.3-1.6-2.6-1.7-2.8-19.6-33.1-32.3-54.5-17-28.5-19.3-32.6-19.2-32.8.1-.1 1.2-.9 2.6-1.6 1.3-.8 2.8-1.6 3.1-1.9.4-.3.8-.5.8-.5.1 0 1.4 2.2 3 4.8 1.6 2.7 3.5 6 4.3 7.3.8 1.4 2.9 4.9 4.6 7.8 1.7 2.9 7.4 12.5 12.7 21.3 5.2 8.8 10.3 17.3 11.1 18.8s5.3 8.9 9.8 16.5c4.5 7.5 8.1 13.7 8.1 13.8-.1 0-1.3.8-2.9 1.7zm22.4 11.8c-2.8 1.7-5.3 3.1-5.4 3.1-.2-0-15.6-8.7-16.7-9.3-.2-.2 1.1-1.1 4.2-2.9 2.5-1.5 8.6-5.1 13.6-8.1l9-5.3.2 5c.1 2.7.2 7.1.2 9.8l0 4.8-5.2 3.1zm-43.6 32.4c1 .8-1.5 1 23.5-1.8 6.4-.7 14.4-1.6 17.9-2 6.6-.7 7.3-.9 7.8-2.3.3-.9-.2-2.1-1-2.5-.3-.2-2.6-.7-5.1-1.2-2.5-.5-6.9-1.5-9.9-2.1-3-.6-6-1.3-6.8-1.5-.8-.2-1.4-.3-1.3-.4.1-.1 3.8-.5 14.1-1.5 3.5-.4 7.6-.8 9.1-.9 3.2-.3 3.9-.6 4.8-1.5l.6-.6-.3-20.7-.3-20.7-5.7-9.7c-8.3-13.9-13.2-22.2-33.3-56-3.6-6.1-7.1-11.9-7.7-13-.6-1-2.9-4.8-5-8.5C39.2 2.4 38.9 2 37.7 1.3 36.3.4 34 .2 32.4.6 31.1.9 4.5 16.6 3.1 17.8c-1.9 1.7-2.8 4.7-2 7 .2.6 5 8.9 10.7 18.4 5.7 9.5 11.8 19.8 13.6 22.9 1.8 3.1 5.9 9.9 9 15.2s8 13.5 10.8 18.3 6.4 10.7 7.9 13.4c1.6 2.6 4.8 8 7.1 11.9 4.3 7.2 4.3 7.2 5.8 8 3.5 2 14.4 8.1 22.1 12.4 3.3 1.8 5.4 3.1 5.2 3.2-.2.1-1.9.4-3.9.6-2 .2-5.9.7-8.7 1.1-2.8.4-8 1-11.5 1.5-3.5.4-6.6.9-7 .9-1.4.4-2 2.8-.8 3.7.4.4 3.8 1.1 11.8 2.7 6.2 1.2 11.4 2.3 11.6 2.4.2.1-1.7.4-4.2.6-2.5.3-5 .5-5.5.6-.5.1-3.2.3-6.1.6-2.8.3-6.8.7-8.9.9-2 .2-5 .5-6.6.7-4 .4-4.6.8-4.6 2.8 0 .6.2 1 .7 1.4z"/> </svg>
<text transform="translate(100,460) " font-size="40" dominant-baseline="central" fill="#6b6e71" font-family="Montserrat" font-weight="bold" style="text-align: center; text-anchor: middle;">R </text>
<rect width="100" height="100" x="150" y="410"  rx="0" stroke="#221f21" stroke-width="2" fill="transparent" style="fill:none"> </rect>
<text transform="translate(200,460) " font-size="40" dominant-baseline="central" fill="#6b6e71" font-family="Montserrat" font-weight="bold" style="text-align: center; text-anchor: middle;">R </text>
<rect width="100" height="100" x="250" y="410"  rx="0" stroke="#221f21" stroke-width="2" fill="transparent" style="fill:none"> </rect>
<text transform="translate(300,460) " font-size="40" dominant-baseline="central" fill="#6b6e71" font-family="Montserrat" font-weight="bold" style="text-align: center; text-anchor: middle;">O </text>
<rect width="12.000001" height="12.000001" x="335" y="413"  rx="0" stroke="#221f21" stroke-width="1" fill="transparent" style="fill:none"> </rect>
<rect width="100" height="100" x="350" y="410"  rx="0" stroke="#221f21" stroke-width="2" fill="transparent" style="fill:none"> </rect>
<text transform="translate(400,460) " font-size="40" dominant-baseline="central" fill="#6b6e71" font-family="Montserrat" font-weight="bold" style="text-align: center; text-anchor: middle;">S </text>
<text x="100" y="552" font-size="20"  dominant-baseline="central" fill="#221f21" font-family="Montserrat" font-weight="500" style="text-align: left; text-anchor: left;">4 </text>
<line x1="100" x2="258" y1="574" y2="574"  stroke="black" stroke-width="1"/>
<text x="100" y="596" font-size="20"  dominant-baseline="central" fill="#221f21" font-family="Montserrat" font-weight="500" style="text-align: left; text-anchor: left;">5 </text>
<line x1="100" x2="281" y1="618" y2="618"  stroke="black" stroke-width="1"/>
<text x="100" y="640" font-size="20"  dominant-baseline="central" fill="#221f21" font-family="Montserrat" font-weight="500" style="text-align: left; text-anchor: left;">5 </text>
<line x1="100" x2="281" y1="662" y2="662"  stroke="black" stroke-width="1"/>
<text x="100" y="684" font-size="20"  dominant-baseline="central" fill="#221f21" font-family="Montserrat" font-weight="500" style="text-align: left; text-anchor: left;">5 </text>
<line x1="100" x2="281" y1="706" y2="706"  stroke="black" stroke-width="1"/>
<text x="100" y="728" font-size="20"  dominant-baseline="central" fill="#221f21" font-family="Montserrat" font-weight="500" style="text-align: left; text-anchor: left;">8 </text>
<line x1="100" x2="350" y1="750" y2="750"  stroke="black" stroke-width="1"/>
</svg>
